--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,200 @@
 /* Use your own code or past solution for Great Idea Web Page CSS here! */
 
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed, 
+figure, figcaption, footer, header, hgroup, 
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+	margin: 0;
+	padding: 0;
+	border: 0;
+	font-size: 100%;
+	font: inherit;
+	vertical-align: baseline;
+}
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, 
+footer, header, hgroup, menu, nav, section {
+	display: block;
+}
+body {
+	line-height: 1;
+}
+ol, ul {
+	list-style: none;
+}
+blockquote, q {
+	quotes: none;
+}
+blockquote:before, blockquote:after,
+q:before, q:after {
+	content: '';
+	content: none;
+}
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
+}
+
+/* Set every element's box-sizing to border-box */
+
+* {
+	box-sizing: border-box;
+}
+
+html, body {
+	height: 100%;
+	font-family: 'Ubuntu', sans-serif;
+}
+
+h1, h2, h3, h4, h5 {
+	font-family: 'Bangers', cursive;
+	letter-spacing: 1px;
+	margin-bottom: 15px;
+}
+
+/* Your code starts here! */
+:root {
+  font-size: 16px;
+}
+.container {
+  width: 60vw;
+  height: 100vh;
+  margin: 0 auto;
+  padding: 1.2rem;
+}
+.navigation {
+  display: flex;
+  padding: 20px 0;
+  /* background: #40798C; */
+  width: inherit;
+  position: fixed;
+  top: 0;
+}
+.navbar {
+  display: flex;
+  justify-content: flex-start;
+  width: 100%;
+  align-items: center;
+}
+
+.navbar a {
+  display: inline-block;
+  padding: 10px;
+  margin: auto 10px;
+  text-decoration: none;
+  color: #ccc;
+}
+.navbar a:hover {
+  transform: scale(1.2);
+}
+
+header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+	width: 100%;
+	flex-wrap: wrap;
+  margin: 30px 0;
+}
+
+.header-left, .header-img{
+  flex-basis: 50%;
+}
+
+.header-left {
+  text-align: center;
+}
+
+.header-left h1 {
+  line-height: 1.2;
+  font-size: 62px;
+}
+.get-started {
+  margin-top: auto;
+  padding: 12px 60px;
+  outline: none;
+  border: 1px solid gray;
+  cursor: pointer;
+  line-height: 1.2;
+}
+.get-started:hover {
+  background: #faf3dd;
+  transform: scale(1.2);
+}
+main {
+  padding: 20px;
+  margin: 0 auto;
+  margin-top: 100px;
+  min-height: 100vh;
+}
+.first-section,
+.third-section {
+	display: flex;
+	flex-wrap: wrap;
+  margin: 30px auto;
+}
+.second-section {
+  width: 100%;
+  background-image: url('../img/mid-page-accent.jpg');
+  height: 200px;
+}
+.header-img {
+  background-image: url('../img/header-img.png');
+  height: 420px;
+  background-repeat: no-repeat;
+  vertical-align: middle;
+  background-size: 100%;
+  background-position: 50% 50%;
+}
+.middle-img {
+  width: 100%;
+}
+.col-2,
+.col-3 {
+	text-align: justify;
+	line-height: 1.5;
+}
+.col-2 {
+	flex-basis: 48%;
+}
+
+.col-3 {
+	flex-basis: 31%;
+}
+
+.mr {
+	margin-right: 20px;
+}
+
+hr {
+  width: 100% !important;
+  border-bottom: 1px solid #ccc;
+  margin: 20px auto;
+}
+
+.contact p:nth-child(4) {
+  padding: 20px 0;
+  }
+footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 30px auto;
+  height: 100px;
+}
 
